--- a/assests/css/home.css
+++ b/assests/css/home.css
@@ -9,6 +9,11 @@ body {
     box-sizing: border-box;
 }
 
+.container-background {
+    background: rgb(255, 193, 35);
+    background: linear-gradient(0deg, rgba(255, 193, 35, 1) 0%, rgba(19, 184, 236, 1) 30%, rgba(190, 38, 235, 1) 60%, rgba(212, 3, 3, 1) 85%, rgba(0, 0, 0, 1) 100%);
+}
+
 nav {
     position: fixed;
     top: 0%;
@@ -109,34 +114,34 @@ nav {
 /* ------------------------------Count Down Code---------------------------------------- */
 .time-wrapper {
     margin-top: -10px;
+    padding-top: 10%;
+    padding-bottom: 10%;
     width: 100%;
     height: 100%;
     position: relative;
-    background: rgb(210, 23, 23);
-    background: linear-gradient(0deg, rgba(210, 23, 23, 1) 0%, rgba(0, 0, 0, 1) 100%);
 }
 
 .time-content {
     background: rgb(252, 194, 1);
     background-image: linear-gradient(to right bottom,
-        #cb9b51 0%,
-        #dfb132 45%,
-        #f6f2c0 50%,
-        #dfb132 55%,
-        #cb9b51 100%);
+            #cb9b51 0%,
+            #dfb132 45%,
+            #f6f2c0 50%,
+            #dfb132 55%,
+            #cb9b51 100%);
     background-size: 400% 400%;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-animation: title 5s infinite;
-  background-position: right;
+    transform: translate(-50%);
+    animation: title 5s infinite;
+    background-position: right;
 }
 
 @keyframes title {
-  to {
-    background-position: left
-  }
+    to {
+        background-position: left
+    }
 }
 
 .timer {
@@ -266,8 +271,6 @@ animation: title 5s infinite;
 .video {
     margin-top: -1px;
     position: relative;
-    background: rgb(196, 45, 255);
-    background: linear-gradient(0deg, rgb(196, 45, 255) 0%, hsl(0, 80%, 46%) 100%);
 }
 
 .video h1 {
@@ -279,7 +282,6 @@ animation: title 5s infinite;
 
 .booking {
     margin-top: -1px;
-    background: #c42dff;
 }
 
 .booking-pass {
@@ -368,13 +370,11 @@ button:active {
 
 
 .slider-container {
-    background: rgb(23, 143, 210);
-    background: linear-gradient(0deg, rgba(23, 143, 210, 1) 0%, rgba(196, 45, 255, 1) 100%);
+    margin-top: -1px;
 }
 
 .slider-container2 {
-    background: rgb(254, 218, 34);
-    background: linear-gradient(0deg, rgba(254, 218, 34, 1) 0%, rgba(23, 143, 210, 1) 100%);
+    margin-top: -1px;
 }
 
 .slider {
@@ -530,7 +530,7 @@ button:active {
     bottom: -10px;
 }
 
-.resposive{
+.resposive {
     width: 80%;
 }
 
