--- a/assests/css/gallery.css
+++ b/assests/css/gallery.css
@@ -128,6 +128,20 @@ nav {
     flex-wrap: wrap;
     padding: 0 4px;
   }
+
+  #fullpage {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat no-repeat;
+    background-position: center center;
+    background-color: black;
+  }
   
   /* Create four equal columns that sits next to each other */
   .column {
