--- a/assests/css/gallery.css
+++ b/assests/css/gallery.css
@@ -102,6 +102,9 @@ nav {
     padding-top: 9rem;
 }
 
+.card{
+    border: none;
+}
 
 .team {
     display: flex;
@@ -127,6 +130,9 @@ nav {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
+    border: none;
+    box-shadow: none;
+    outline: none;
   }
 
   #fullpage {
