--- a/assests/css/home.css
+++ b/assests/css/home.css
@@ -635,6 +635,12 @@ button:active {
     color: #000000;
 }
 
+.slide{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
 @media screen and (max-width: 800px) {
     .next {
         display: none !important;
@@ -698,8 +704,14 @@ button:active {
 @media screen and (max-width: 768px) {
     .carousel {
         position: relative;
-        left: -2%;
-        width: 97%;
+        left: -1%;
+        width: 98%;
+    }
+
+    .carousel-inner {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
     }
 
     .carousel-item img {
@@ -707,9 +719,8 @@ button:active {
         height: auto;
     }
 
-    .carousel-item  {
-        width: 134%;
-        
+    .carousel-item  {  
+     width: 135%;   
     }
 }
 
