jo bhai carousel

--- a/assests/css/home.css
+++ b/assests/css/home.css
@@ -609,14 +609,8 @@ button:active {
     }
 }
 
-.carousel {
-    position: relative;
-    left: 13%;
-    width: 76%;
-}
-
 .carousel-item img {
-    width: 307px;
+    width: 100%;
     height: auto;
 }
 
@@ -632,13 +626,7 @@ button:active {
 .slide-button {
     background: none;
     border: none;
-    color: #000000;
-}
-
-.slide{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    color: white;
 }
 
 @media screen and (max-width: 800px) {
@@ -649,7 +637,7 @@ button:active {
 
 
 /* Styles for mobile and tablets */
-@media screen and (max-width: 1440px) {
+/* @media screen and (max-width: 1440px) { */
     /* .slider{
         width: 100%;
     }
@@ -681,7 +669,7 @@ button:active {
         width: 20%;
     } */
 
-    .carousel {
+    /* .carousel {
         position: relative;
         left: 2%;
         width: 96%;
@@ -723,7 +711,7 @@ button:active {
      width: 135%;   
     }
 }
-
+ */
 
 
 
