--- a/assests/css/about.css
+++ b/assests/css/about.css
@@ -44,6 +44,11 @@ nav {
     }
 }
 
+.nav-link{
+    display: flex;
+    justify-content: center;
+}
+
 .button {
     display: flex;
     height: 50px;
