--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     box-sizing: border-box;
 }
 
@@ -14,6 +14,11 @@ nav {
     top: 0%;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.329);
     z-index: 1;
+}
+
+.nav-link{
+    display: flex;
+    justify-content: center;
 }
 
 .nav-item .active {
