--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 body {
     margin: 0;
@@ -108,10 +109,92 @@ nav {
 .sponsor1{
     margin-top: 4%;
     color: white;
+    background: #212a61;
+    text-align: center;
 }
 
-.BG{
-    width: 120%;
+.sponsor2 {
+color: white;
+text-align: center;
+background: #cc2527;
+}
+
+.sponsor3 {
+color: white;
+text-align: center;
+background: #0d6efd;
+}
+
+.s1, .s2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.h1{
+    font-family: "Merienda", cursive;
+    font-weight: 800;
+    text-align: center;
+    word-spacing: 4px;
+    margin-bottom: 25px;
+    color: white;
+    background: rgb(252, 194, 1);
+    background-image: linear-gradient(to right,
+        #cb9b51 0%,
+        #f6e27a 45%,
+        #f6f2c0 50%,
+        #f6e27a 55%,
+        #cb9b51 100%);
+    background-size: 150% 150%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: title 10s infinite;
+    background-position: right;
+  }
+  
+  @keyframes title {
+    to {
+      background-position: left
+    }
+  }
+
+.h2{
+    font-family: "Crimson Text", serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+}
+
+.text-capitalize {
+    font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+@media screen and (max-width:768px) {
+    .sponsor1{
+        margin-top: 10%;
+    }
+
+    .s1{
+        flex-direction: column;
+    }
+
+    .s2{
+        flex-direction: column-reverse;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .sponsor1{
+        margin-top: 15%;
+        padding-top: 10%;
+    }
+
+    .box{
+        padding-top: 5%;
+    }
 }
 
 /* ------------------------------footer---------------------------------------- */
