--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -125,6 +125,48 @@ text-align: center;
 background: #0d6efd;
 }
 
+.sponsor4 {
+    color: white;
+    text-align: center;
+    background: #626461;
+    }
+
+.sponsor5 {
+    color: black;
+    text-align: center;
+    background: #fafafa;
+}
+
+.sponsor6 {
+    color: black;
+    text-align: center;
+    background: #fafafa;
+}
+
+.sponsor7 {
+    color: black;
+    text-align: center;
+    background: #ffd21d;
+}
+
+.sponsor8 {
+    color: white;
+    text-align: center;
+    background: #000000;
+}
+
+.sponsor9 {
+    color: white;
+    text-align: center;
+    background: #6d0003;
+}
+
+.sponsor10 {
+    color: black;
+    text-align: center;
+    background: #fafafa;
+}
+
 .s1, .s2{
     display: flex;
     justify-content: center;
