--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -162,9 +162,9 @@ background: #0d6efd;
 }
 
 .sponsor10 {
-    color: black;
+    color: white;
     text-align: center;
-    background: #fafafa;
+    background: #e34327;
 }
 
 .s1, .s2{
