--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -128,7 +128,7 @@ background: #0d6efd;
 .sponsor4 {
     color: white;
     text-align: center;
-    background: #626461;
+    background: #3ad5ff;
     }
 
 .sponsor5 {
@@ -138,9 +138,9 @@ background: #0d6efd;
 }
 
 .sponsor6 {
-    color: black;
+    color: white;
     text-align: center;
-    background: #fafafa;
+    background: #8c8c8c;
 }
 
 .sponsor7 {
