--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -128,7 +128,7 @@ background: #0d6efd;
 .sponsor4 {
     color: white;
     text-align: center;
-    background: #3ad5ff;
+    background: #693570;
     }
 
 .sponsor5 {
