changes resposive icon

--- a/assests/css/gallery.css
+++ b/assests/css/gallery.css
@@ -251,7 +251,9 @@ footer .content .top {
 }
 
 .top .media-icons a:nth-child(2) {
-    background: #e1306c;
+    background: #FD1D1D;
+    background: linear-gradient(48deg, #f9ce34, #fa7e1e, #d62976, #962fbf);
+    background-size: 40px;
     border-radius: 33%;
     height: 40px;
     width: 40px;
@@ -437,8 +439,8 @@ footer .bottom-details .bottom_text {
     }
 
     .content .top .media-icons a {
-        height: 35px;
-        width: 35px;
+        height: 40px;
+        width: 40px;
         font-size: 14px;
         line-height: 35px;
     }
