--- a/assests/css/contact.css
+++ b/assests/css/contact.css
@@ -49,7 +49,7 @@ nav {
     }
 }
 
-.nav-link{
+.nav-link {
     display: flex;
     justify-content: center;
 }
@@ -115,38 +115,13 @@ nav {
 
 /*------------------------------ Contact Content ------------------------------ */
 
-/*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
 
-@font-face {
-    font-family: Poppins-Regular;
-    src: url('../fonts/poppins/Poppins-Regular.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-Medium;
-    src: url('../fonts/poppins/Poppins-Medium.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-Bold;
-    src: url('../fonts/poppins/Poppins-Bold.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-SemiBold;
-    src: url('../fonts/poppins/Poppins-SemiBold.ttf'); 
-  }
-  
-  
-  
-  
-  /*//////////////////////////////////////////////////////////////////
+/*//////////////////////////////////////////////////////////////////
   [ RESTYLE TAG ]*/
-  
-  
-  /*---------------------------------------------*/
-  /* a {
+
+
+/*---------------------------------------------*/
+/* a {
       font-family: Poppins-Regular;
       font-size: 14px;
       line-height: 1.7;
@@ -157,99 +132,86 @@ nav {
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
   } */
-  
-  a:focus {
-      outline: none !important;
-  }
-  
-  a:hover {
-      text-decoration: none;
-  }
-  
-  /*---------------------------------------------*/
-  h1,h2,h3,h4,h5,h6 {
-      margin: 0px;
-  }
-  
-  p {
-      font-family: Poppins-Regular;
-      font-size: 14px;
-      line-height: 1.7;
-      color: #666666;
-      margin: 0px;
-  }
-  
-  ul, li {
-      margin: 0px;
-      list-style-type: none;
-  }
-  
-  
-  /*---------------------------------------------*/
-  input {
-      outline: none;
-      border: none;
-  }
-  
-  textarea {
+
+a:focus {
+    outline: none !important;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+/*---------------------------------------------*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0px;
+}
+
+p {
+    font-family: monospace;
+    font-size: 14px;
+    line-height: 1.7;
+    color: #666666;
+    margin: 0px;
+}
+
+ul,
+li {
+    margin: 0px;
+    list-style-type: none;
+}
+
+
+/*---------------------------------------------*/
+input {
     outline: none;
     border: none;
-  }
-  
-  textarea:focus, input:focus {
+}
+
+textarea {
+    outline: none;
+    border: none;
+}
+
+textarea:focus,
+input:focus {
     border-color: transparent !important;
-  }
-/*   
-  input:focus::-webkit-input-placeholder { color:transparent; }
-  input:focus:-moz-placeholder { color:transparent; }
-  input:focus::-moz-placeholder { color:transparent; }
-  input:focus:-ms-input-placeholder { color:transparent; }
-  
-  textarea:focus::-webkit-input-placeholder { color:transparent; }
-  textarea:focus:-moz-placeholder { color:transparent; }
-  textarea:focus::-moz-placeholder { color:transparent; }
-  textarea:focus:-ms-input-placeholder { color:transparent; }
-  
-  input::-webkit-input-placeholder { color: #adadad;}
-  input:-moz-placeholder { color: #adadad;}
-  input::-moz-placeholder { color: #adadad;}
-  input:-ms-input-placeholder { color: #adadad;}
-  
-  textarea::-webkit-input-placeholder { color: #adadad;}
-  textarea:-moz-placeholder { color: #adadad;}
-  textarea::-moz-placeholder { color: #adadad;}
-  textarea:-ms-input-placeholder { color: #adadad;}
-   */
-  /*---------------------------------------------*/
-  button {
-      outline: none !important;
-      border: none;
-      background: transparent;
-  }
-  
-  button:hover {
-      cursor: pointer;
-  }
-  
-  iframe {
-      border: none !important;
-  }
-  
-  
-  /*---------------------------------------------*/
-  .container {
-      max-width: 1200px;
-  }
-  
-  
-  
-  
-  
-  /*//////////////////////////////////////////////////////////////////
+}
+
+/*---------------------------------------------*/
+button {
+    outline: none !important;
+    border: none;
+    background: transparent;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+iframe {
+    border: none !important;
+}
+
+
+/*---------------------------------------------*/
+.container {
+    max-width: 1200px;
+}
+
+
+
+
+
+/*//////////////////////////////////////////////////////////////////
   [ Contact ]*/
-  
-  .container-contact100 {
-    width: 100%;  
+
+.container-contact100 {
+    width: 100%;
     min-height: 100vh;
     display: -webkit-box;
     display: -webkit-flex;
@@ -260,73 +222,71 @@ nav {
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background: #a64bf4;
-    background: -webkit-linear-gradient(45deg, #00dbde, #fc00ff);
-    background: -o-linear-gradient(45deg, #00dbde, #fc00ff);
-    background: -moz-linear-gradient(45deg, #00dbde, #fc00ff);
-    background: linear-gradient(45deg, #00dbde, #fc00ff);
-    
-  }
-  
-  .wrap-contact100 {
+    background: rgb(255, 193, 35);
+    background: linear-gradient(301deg, rgba(19, 184, 236, 1) 30%, rgba(190, 38, 235, 1) 51%, rgba(212, 3, 3, 1) 84%, rgba(0, 0, 0, 1) 100%);
+}
+
+.wrap-contact100 {
     width: 500px;
     background: #fff;
     border-radius: 10px;
     overflow: hidden;
     padding: 42px 55px 45px 55px;
-  }
-  
-  
-  /*------------------------------------------------------------------
+}
+
+
+/*------------------------------------------------------------------
   [ Form ]*/
-  
-  .contact100-form {
+
+.contact100-form {
     width: 100%;
-  }
-  
-  .contact100-form-title {
+}
+
+.contact100-form-title {
     display: block;
-    font-family: Poppins-Bold;
+    font-family: monospace;
     font-size: 39px;
     color: #333333;
     line-height: 1.2;
     text-align: center;
     padding-bottom: 44px;
-  }
-  
-  
-  
-  /*------------------------------------------------------------------
+}
+
+
+
+/*------------------------------------------------------------------
   [ Input ]*/
-  
-  .wrap-input100 {
+
+.wrap-input100 {
     width: 100%;
     position: relative;
     border-bottom: 2px solid #d9d9d9;
     padding-bottom: 13px;
     margin-bottom: 27px;
-  }
-  
-  .label-input100 {
-    font-family: Poppins-Regular;
-    font-size: 13px;
+}
+
+.label-input100 {
+    font-family: monospace;
+    font-size: 15px;
     color: #666666;
     line-height: 1.5;
     padding-left: 5px;
-  }
-  
-  .input100 {
+}
+
+.input100 {
     display: block;
     width: 100%;
     background: transparent;
-    font-family: Poppins-Medium;
-    font-size: 18px;
+    font-family: monospace;
+    font-size: 23px;
+    font-weight: 700;
     color: #333333;
     line-height: 1.2;
     padding: 0 5px;
-  }
-  
-  .focus-input100 {
+    border-radius: 5px;
+}
+
+.focus-input100 {
     position: absolute;
     display: block;
     width: 100%;
@@ -334,9 +294,9 @@ nav {
     top: 0;
     left: 0;
     pointer-events: none;
-  }
-  
-  .focus-input100::before {
+}
+
+.focus-input100::before {
     content: "";
     display: block;
     position: absolute;
@@ -344,41 +304,41 @@ nav {
     left: 0;
     width: 0;
     height: 2px;
-  
+
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
-  
+
     background: #7f7f7f;
-  }
-  
-  
-  /*---------------------------------------------*/
-  input.input100 {
+}
+
+
+/*---------------------------------------------*/
+input.input100 {
     height: 40px;
-  }
-  
-  
-  textarea.input100 {
+}
+
+
+textarea.input100 {
     min-height: 110px;
     padding-top: 9px;
     padding-bottom: 13px;
-  }
-  
-  
-  .input100:focus + .focus-input100::before {
+}
+
+
+.input100:focus+.focus-input100::before {
     width: 100%;
-  }
-  
-  .has-val.input100 + .focus-input100::before {
+}
+
+.has-val.input100+.focus-input100::before {
     width: 100%;
-  }
-  
-  
-  /*------------------------------------------------------------------
+}
+
+
+/*------------------------------------------------------------------
   [ Button ]*/
-  .container-contact100-form-btn {
+.container-contact100-form-btn {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -387,9 +347,9 @@ nav {
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 13px;
-  }
-  
-  .wrap-contact100-form-btn {
+}
+
+.wrap-contact100-form-btn {
     width: 100%;
     display: block;
     position: relative;
@@ -397,9 +357,9 @@ nav {
     border-radius: 25px;
     overflow: hidden;
     margin: 0 auto;
-  }
-  
-  .contact100-form-bgbtn {
+}
+
+.contact100-form-bgbtn {
     position: absolute;
     z-index: -1;
     width: 300%;
@@ -411,14 +371,14 @@ nav {
     background: linear-gradient(left, #00dbde, #fc00ff, #00dbde, #fc00ff);
     top: 0;
     left: -100%;
-  
+
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
-  }
-  
-  .contact100-form-btn {
+}
+
+.contact100-form-btn {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -429,51 +389,52 @@ nav {
     padding: 0 20px;
     width: 100%;
     height: 50px;
-  
-    font-family: Poppins-Medium;
-    font-size: 16px;
+
+    font-family: monospace;
+    font-size: 20px;
     color: #fff;
     line-height: 1.2;
-  }
-  
-  .wrap-contact100-form-btn:hover .contact100-form-bgbtn {
+}
+
+.wrap-contact100-form-btn:hover .contact100-form-bgbtn {
     left: 0;
-  }
-  
-  .contact100-form-btn i {
+}
+
+.contact100-form-btn i {
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
-  }
-  .contact100-form-btn:hover i {
+}
+
+.contact100-form-btn:hover i {
     -webkit-transform: translateX(10px);
     -moz-transform: translateX(10px);
     -ms-transform: translateX(10px);
     -o-transform: translateX(10px);
     transform: translateX(10px);
-  }
-  
-  
-  /*------------------------------------------------------------------
+}
+
+
+/*------------------------------------------------------------------
   [ Responsive ]*/
-  
-  @media (max-width: 576px) {
+
+@media (max-width: 576px) {
     .wrap-contact100 {
-      padding: 72px 15px 65px 15px;
+        padding: 72px 15px 65px 15px;
     }
-  }
-  
-  
-  
-  /*------------------------------------------------------------------
+}
+
+
+
+/*------------------------------------------------------------------
   [ Alert validate ]*/
-  
-  .validate-input {
+
+.validate-input {
     position: relative;
-  }
-  
-  .alert-validate::before {
+}
+
+.alert-validate::before {
     content: attr(data-validate);
     position: absolute;
     max-width: 70%;
@@ -489,23 +450,23 @@ nav {
     transform: translateY(-50%);
     right: 2px;
     pointer-events: none;
-  
+
     font-family: Poppins-Regular;
     color: #c80000;
     font-size: 13px;
     line-height: 1.4;
     text-align: left;
-  
+
     visibility: hidden;
     opacity: 0;
-  
+
     -webkit-transition: opacity 0.4s;
     -o-transition: opacity 0.4s;
     -moz-transition: opacity 0.4s;
     transition: opacity 0.4s;
-  }
-  
-  .alert-validate::after {
+}
+
+.alert-validate::after {
     content: "\f06a";
     font-family: FontAwesome;
     display: block;
@@ -519,32 +480,32 @@ nav {
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
     right: 8px;
-  }
-  
-  .alert-validate:hover:before {
+}
+
+.alert-validate:hover:before {
     visibility: visible;
     opacity: 1;
-  }
-  
-  @media (max-width: 992px) {
+}
+
+@media (max-width: 992px) {
     .alert-validate::before {
-      visibility: visible;
-      opacity: 1;
+        visibility: visible;
+        opacity: 1;
     }
-  }
-  
-  
-  
-  /*//////////////////////////////////////////////////////////////////
+}
+
+
+
+/*//////////////////////////////////////////////////////////////////
   [ Restyle Select2 ]*/
-  
-  .select2-container {
+
+.select2-container {
     display: block;
     max-width: 100% !important;
     width: auto !important;
-  }
-  
-  .select2-container .select2-selection--single {
+}
+
+.select2-container .select2-selection--single {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -556,20 +517,20 @@ nav {
     height: 40px;
     outline: none;
     position: relative;
-  }
-  
-  /*------------------------------------------------------------------
+}
+
+/*------------------------------------------------------------------
   [ in select ]*/
-  .select2-container .select2-selection--single .select2-selection__rendered {
+.select2-container .select2-selection--single .select2-selection__rendered {
     font-family: Poppins-Medium;
     font-size: 18px;
     color: #333333;
     line-height: 1.2;
-    padding-left: 5px ;
+    padding-left: 5px;
     background-color: transparent;
-  }
-  
-  .select2-container--default .select2-selection--single .select2-selection__arrow {
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
     height: 100%;
     top: 50%;
     transform: translateY(-50%);
@@ -582,88 +543,93 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  
-  .select2-selection__arrow b {
+}
+
+.select2-selection__arrow b {
     display: none;
-  }
-  
-  .select2-selection__arrow::before {
+}
+
+.select2-selection__arrow::before {
     content: '';
     display: block;
-    
+
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
     border-bottom: 5px solid #999999;
     margin-bottom: 2px;
-  }
-  
-  .select2-selection__arrow::after {
+}
+
+.select2-selection__arrow::after {
     content: '';
     display: block;
-    
+
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
     border-top: 5px solid #999999;
-  }
-  
-  /*------------------------------------------------------------------
+}
+
+/*------------------------------------------------------------------
   [ Dropdown option ]*/
-  .select2-container--open .select2-dropdown {
+.select2-container--open .select2-dropdown {
     z-index: 1251;
     border: 0px solid #e5e5e5;
     border-radius: 0px;
     background-color: white;
-  
+
     box-shadow: 0 3px 10px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 3px 10px 0px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0 3px 10px 0px rgba(0, 0, 0, 0.2);
     -o-box-shadow: 0 3px 10px 0px rgba(0, 0, 0, 0.2);
     -ms-box-shadow: 0 3px 10px 0px rgba(0, 0, 0, 0.2);
-  }
-  
-  .select2-dropdown--above {top: -30px;}
-  .select2-dropdown--below {top: 8px;}
-  
-  .select2-container .select2-results__option[aria-selected] {
+}
+
+.select2-dropdown--above {
+    top: -30px;
+}
+
+.select2-dropdown--below {
+    top: 8px;
+}
+
+.select2-container .select2-results__option[aria-selected] {
     padding-top: 10px;
     padding-bottom: 10px;
-  }
-  
-  .select2-container .select2-results__option[aria-selected="true"] {
+}
+
+.select2-container .select2-results__option[aria-selected="true"] {
     background: #a64bf4;
     background: -webkit-linear-gradient(right, #00dbde, #fc00ff);
     background: -o-linear-gradient(right, #00dbde, #fc00ff);
     background: -moz-linear-gradient(right, #00dbde, #fc00ff);
     background: linear-gradient(right, #00dbde, #fc00ff);
     color: white;
-  }
-  
-  .select2-container .select2-results__option--highlighted[aria-selected] {
+}
+
+.select2-container .select2-results__option--highlighted[aria-selected] {
     background: #a64bf4;
     background: -webkit-linear-gradient(right, #00dbde, #fc00ff);
     background: -o-linear-gradient(right, #00dbde, #fc00ff);
     background: -moz-linear-gradient(right, #00dbde, #fc00ff);
     background: linear-gradient(right, #00dbde, #fc00ff);
     color: white;
-  }
-  
-  .select2-results__options {
+}
+
+.select2-results__options {
     font-family: Poppins-Regular;
     font-size: 15px;
     color: #333333;
     line-height: 1.2;
-  }
-  
-  .select2-search--dropdown .select2-search__field {
+}
+
+.select2-search--dropdown .select2-search__field {
     border: 1px solid #aaa;
     outline: none;
     font-family: Poppins-Regular;
     font-size: 15px;
     color: #333333;
     line-height: 1.2;
-  }
-  
+}
+
 
 /* ------------------------------footer---------------------------------------- */
 .venue {
@@ -698,10 +664,10 @@ nav {
             oklch(0.1 0.2 240 / 0.95),
             oklch(0.1 0.2 240 / 0.95)) padding-box,
         /* ends at inner border edges */
-        /* conic-gradient(from var(--bg-angle) in oklch longer hue,
+    /* conic-gradient(from var(--bg-angle) in oklch longer hue,
             oklch(0.85 0.37 0) 0 0) border-box; */
     /* extends to outer border edges */
-    border: 2px solid #000; 
+    border: 2px solid #000;
     /* &:hover {
         animation-play-state: running;
       } */
@@ -983,7 +949,7 @@ footer .bottom-details .bottom_text {
     .bottom-details .bottom_text a {
         font-size: 12px;
     }
-} 
+}
 
 @media (max-width: 520px) {
     footer::before {
