--- a/assests/css/contact.css
+++ b/assests/css/contact.css
@@ -421,7 +421,9 @@ textarea.input100 {
 
 @media (max-width: 576px) {
     .wrap-contact100 {
-        padding: 72px 15px 65px 15px;
+        padding: 42px 15px 65px 15px;
+        width: 478px;
+        margin-top: 86px;
     }
 }
 
