--- a/assests/css/about.css
+++ b/assests/css/about.css
@@ -12,10 +12,10 @@ body {
     box-sizing: border-box;
 }
 
-.container-background {
+/* .container-background {
     background: rgb(255, 193, 35);
     background: linear-gradient(0deg, rgba(255, 193, 35, 1) 0%, rgba(19, 184, 236, 1) 30%, rgba(190, 38, 235, 1) 60%, rgba(212, 3, 3, 1) 85%, rgba(0, 0, 0, 1) 100%);
-}
+} */
 
 nav {
     position: fixed;
@@ -136,7 +136,7 @@ nav {
     flex-direction: column;
     justify-content: center;
     text-align: justify;
-    color: white;
+    color: black;
 }
 
 .name {
@@ -306,53 +306,6 @@ nav {
     border-radius: 50%;
 }
 
-/* ------------------------------footer---------------------------------------- */
-.venue {
-    background-image: url("/img/map.gif");
-    background-size: cover;
-    height: 100vh;
-    position: relative;
-    top: 55px;
-}
-
-/* @property --bg-angle {
-    inherits: false;
-    initial-value: 0deg;
-    syntax: "<angle>";
-}
-
-@keyframes spin {
-    to {
-        --bg-angle: 360deg;
-    }
-} */
-
-.venue iframe {
-    width: 35%;
-    height: 40%;
-    position: relative;
-    top: 5%;
-    left: 32%;
-    border-radius: 25px;
-    /* animation: spin 2.5s infinite linear;
-    background: linear-gradient(to bottom,
-            oklch(0.1 0.2 240 / 0.95),
-            oklch(0.1 0.2 240 / 0.95)) padding-box,
-        /* ends at inner border edges */
-        /* conic-gradient(from var(--bg-angle) in oklch longer hue,
-            oklch(0.85 0.37 0) 0 0) border-box; */
-    /* extends to outer border edges */
-    border: 2px solid #000; 
-    /* &:hover {
-        animation-play-state: running;
-      } */
-}
-
-/* @keyframes spin {
-    to {
-        --bg-angle: 360deg;
-    }
-} */
 
 /* ------------------------------footer---------------------------------------- */
 footer {
@@ -597,6 +550,13 @@ footer .bottom-details .bottom_text {
 }
 
 @media (max-width: 700px) {
+    .name{
+        display: flex;
+        justify-content: center;
+        margin-top: 98px;
+        font-size: 34PX;
+    }
+
     footer {
         position: relative;
     }
