--- a/assests/css/about.css
+++ b/assests/css/about.css
@@ -622,7 +622,7 @@ footer .bottom-details .bottom_text {
     }
 
     .about-gif img {
-        width: 103%;
+        width: 104%;
         margin: -91px 0 41px;
     }
 
@@ -646,6 +646,10 @@ footer .bottom-details .bottom_text {
         max-height: 100vh;
         overflow: hidden;
         color: #000;
+    }
+
+    footer {
+        width: 104%;
     }
 
     footer::before {
