--- a/assests/css/gallery.css
+++ b/assests/css/gallery.css
@@ -268,6 +268,11 @@ footer .content .top {
     background: #1ed760;
 }
 
+.top .media-icons a:nth-child(3):hover {
+    color: #1ed760;
+    background: #fff;
+}
+
 footer .content .link-boxes {
     width: 100%;
     display: flex;
