--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -319,6 +319,11 @@ footer .content .top {
     background: #1ed760;
 }
 
+.top .media-icons a:nth-child(3):hover {
+    color: #1ed760;
+    background: #fff;
+}
+
 footer .content .link-boxes {
     width: 100%;
     display: flex;
