chnages in tablet

--- a/assests/css/about.css
+++ b/assests/css/about.css
@@ -595,6 +595,62 @@ footer .bottom-details .bottom_text {
     }
 } 
 
+@media (max-width: 768px) {
+    .name{
+        display: flex;
+        justify-content: center;
+        margin: 98px 5px;
+        font-size: 44PX;
+        font-weight: 700;
+    }
+
+    .img .about-img {
+        width: 70%;
+        margin: -3rem 0rem 0rem 10rem;
+        margin-bottom: 59%;
+    }
+
+    .company-info span {
+        font-size: 2.5rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .company-info p {
+        margin-top: 3%;
+        margin-right: 2rem;
+        text-align: center;
+    }
+
+    .about-gif img {
+        width: 102.1vw;
+        margin: -91px 0 37px;
+    }
+
+    .team span{
+        font-size: 2.5rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .teamcontainer{
+        width: 100%;
+        margin: 15px auto;
+        margin-top: 46px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    
+    footer {
+        background: #000;
+        width: 102.2%;
+        position: relative;
+        bottom: 0;
+        left: 0;
+    }
+}
+
 @media (max-width: 520px) {
     
     h1{
