--- a/assests/css/gallery.css
+++ b/assests/css/gallery.css
@@ -438,6 +438,15 @@ footer .bottom-details .bottom_text {
     }
 }
 
+@media (max-width: 768px) {
+    
+    .team span{
+        font-size: 2.5rem;
+        font-weight: bold;
+        text-align: center;
+    }
+}
+
 @media (max-width: 700px) {
     footer {
         position: relative;
