--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -488,6 +488,12 @@ footer .bottom-details .bottom_text {
     }
 }
 
+@media (min-width: 768px) {
+    .spons-para {
+        width: 100%;
+    }
+}
+
 @media (max-width: 700px) {
     footer {
         position: relative;
