--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -108,21 +108,21 @@ nav {
 /* ------------------------------sponsors---------------------------------------- */
 .sponsor1{
     margin-top: 4%;
-    color: white;
-    background: #212a61;
+    color: black;
+    background: #fefefe;
     text-align: center;
 }
 
 .sponsor2 {
 color: white;
 text-align: center;
-background: #cc2527;
+background: #113b53;
 }
 
 .sponsor3 {
 color: white;
 text-align: center;
-background: #0d6efd;
+background: #000;
 }
 
 .sponsor4 {
@@ -245,6 +245,7 @@ footer {
     width: 100%;
     bottom: 0;
     left: 0;
+    border-top: 1px solid white;
 }
 
 footer .content {
@@ -441,7 +442,7 @@ footer .bottom-details .bottom_text {
 }
 
 /* ------------------------------------------media-footer------------------------------------------- */
-@media (max-width: 900px) {
+@media (max-width: 950px) {
     .company-info {
         width: 100%;
         margin-right: 0rem;
