--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -189,6 +189,12 @@ background: #d10069;
     background: #292929;
 }
 
+.sponsor16 {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    background: #01adef;
+}
+
 
 .s1, .s2{
     display: flex;
