--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -166,9 +166,9 @@ background: #d10069;
 }
 
 .sponsor9 {
-    color: rgb(0, 0, 0);
+    color: white;
     text-align: center;
-    background: #ffffff;
+    background: #743629;
 }
 
 .sponsor10 {
