--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -230,7 +230,7 @@ background: #d10069;
 .sponsor19 {
     color: black;
     text-align: center;
-    background: #ffffff;
+    background: #bcb5a5;
 }
 
 .s1, .s2{
