--- a/assests/css/sponsors.css
+++ b/assests/css/sponsors.css
@@ -233,6 +233,73 @@ background: #d10069;
     background: #bcb5a5;
 }
 
+.container{
+    padding-top: 9rem;
+} 
+
+.card{
+    border: none;
+    bottom: 10px;
+}
+
+.team {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 20px;
+}
+
+.team span {
+    font-size: 2.5rem;
+    font-weight: bold;
+    border-bottom: 4px solid #ff0081;
+    color: #f31c3c;
+}
+
+.team span .ourtm {
+    border-bottom: none;
+    color: #f7d00e;
+}
+
+
+.grid-img {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+    border: none;
+    box-shadow: none;
+    outline: none;
+  }
+
+  #fullpage {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat no-repeat;
+    background-position: center center;
+    background-color: black;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+    border-radius: 10px;
+  }
+  
+
 .s1, .s2{
     display: flex;
     justify-content: center;
